--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,8 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<!-- <java.version>1.8</java.version> -->
-		
-
-		<java.version>11</java.version>
-		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
-		<jacoco.version>0.8.7</jacoco.version>
-   		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-    		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-    		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-    		<sonar.language>java</sonar.language>
+		<java.version>17</java.version>
+		 <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -125,12 +117,10 @@
 
 	<distributionManagement>
 		<repository>
-			<id>maven-releases</id>
-			<url>http://206.189.129.251:8000/repository/maven-releases/</url>
+			<id>dev</id>
+			<url>file://jarstaging</url>
 		</repository>
-		<snapshotRepository>
-			<id>maven-snapshots</id>
-			<url>http://206.189.129.251:8000/repository/maven-snapshots/</url>
-		</snapshotRepository>
 	</distributionManagement>
+
+
 </project>
