--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
 	<distributionManagement>
 		<repository>
 			<id>dev</id>
-			<url>file://jarstaging</url>
+			<url>file://target</url>
 		</repository>
 	</distributionManagement>
 
